--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: registry-service
+  cloud:
+    config:
+      uri: http://localhost:9020
+      discovery:
+        service-id: config-server
 
 eureka:
   client:
